core/poke-web/overlays/production/patches/deployment.rmv-debug.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poke-poke-api
spec:
  template:
    spec:
      containers:
      - name: poke-api
