core/poke-web/overlays/production/patches/ingress.add-tls.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poke-poke-api
spec:
  rules:
  - host: poke-api.curioushuman.com.au
    http:
      paths:
      - backend:
          service:
            name: poke-poke-api
            port:
              number: 3000
        path: /api/?(.*)
        pathType: Prefix
  tls:
  - hosts:
    - poke-api.curioushuman.com.au
    secretName: letsencrypt-poke-secret
